first test mandarin

--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
         https://mabylife.github.io/mabyType
       </p>
     </div>
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
