complete main logic.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <h1 class="wordmark">mabytype</h1>
-      <div class="mainTextCon" id="mainText"></div>
+      <p class="mainTextCon" id="text"></p>
       <div class="butCon">
         <button class="modeBut fake3d" id="modeBut" onclick="changeMode()">
           10 Words
@@ -28,7 +28,7 @@
     </div>
 
     <div class="line"></div>
-    <input type="text" id="inputField" class="opacityNone" autocomplete="off" />
+    <input type="text" id="input" class="opacityNone" autocomplete="off" />
 
     <div class="unfocused" id="unfocused">
       <div class="unfocusedCon">
@@ -90,6 +90,6 @@
         https://mabylife.github.io/mabyType
       </p>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
