--- a/test.html
+++ b/test.html
@@ -6,15 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <p id="text">臨潁美人在白帝</p>
+    <p id="text"></p>
     <br />
     <input
       type="text"
-      id="answer"
-      oninput="checkAnswer()"
-      style="opacity: .5;"
+      id="input"
+      style="opacity: 1;"
     />
 
-    <script src="test.js"></script>
+    <script type="module" src="test.js"></script>
   </body>
 </html>
