make it works in the layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </div>
 
     <div class="line"></div>
-    <input type="text" id="input" class="opacityNone" autocomplete="off" />
 
     <div class="unfocused" id="unfocused">
       <div class="unfocusedCon">
@@ -81,7 +80,7 @@
       <p>Caps Lock</p>
     </div>
 
-    <input type="text" class="mandarinInput" id="mandarinInput" autocomplete="off" />
+    <input type="text" class="mandarinInput" id="input" autocomplete="off" />
 
     <div class="info">
       <p>
