add fonts properly

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   <body>
     <h1 id="wordmark" class="wordmark">mabytype</h1>
-    <p class="mainTextCon" id="text"></p>
-    <input type="text" class="mandarinInput" id="input" autocomplete="off" />
+    <p class="mainTextCon nst" id="text"></p>
+    <input type="text" class="mandarinInput nst" id="input" autocomplete="off" />
     <div class="butCon">
       <button class="modeBut fake3d" id="modeBut" onclick="changeMode()">
         10 Words
