--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
   <body>
     <h1 id="wordmark" class="wordmark">mabytype</h1>
     <p class="mainTextCon nst" id="text"></p>
-    <input type="text" class="mandarinInput nst" id="input" autocomplete="off" />
+    <input
+      type="text"
+      class="mandarinInput nst"
+      id="input"
+      autocomplete="off"
+    />
     <div class="butCon">
       <button class="modeBut fake3d" id="modeBut" onclick="changeMode()">
         10 Words
