--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </button>
     </div>
 
-    <div class="resultCon">
+    <div class="resultCon" id="resultCon">
       <h1 class="nst">每分鐘打字數</h1>
       <p  id="wpmResult">51.2 / 47</p>
       <label class="nst">原始結果 / 淨結果</label>
