Update UI elements for improved readability and localization

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon shortcut" href="favicon.ico" />
   </head>
   <body>
-    <h1 id="wordmark" class="wordmark">mabytype</h1>
+    <h1 id="wordmark" class="wordmark">MABYTYPE</h1>
     <div class="settingCon" id="settingCon">
       <div class="settingItem" id="timeSetting">
         <h1 class="settingName nst">計時時間</h1>
@@ -121,27 +121,27 @@
 
     <div class="resultCon" id="resultCon">
       <h1 class="nst">每分鐘打字數</h1>
-      <p  id="wpmResult">51.2 / 47</p>
-      <label class="nst">原始結果 / 淨結果</label>
+      <p  id="wpmResult"></p>
+      <h1 class="nst">原始結果 / 淨結果</h1>
       <div class="resultItem">
         <h1 class="nst">評級</h1>
-        <p id="ratingResult">B-</p>
+        <p id="ratingResult"></p>
       </div>
       <div class="resultItem">
         <h1 class="nst">正確</h1>
-        <p id="accuracyResult">98.5%</p>
+        <p id="accuracyResult"></p>
       </div>
       <div class="resultItem">
         <h1 >模式</h1>
-        <p id="modeResult">名言 / 15秒</p>
+        <p id="modeResult"></p>
       </div>
       </div>
 
       <div class="footer">
         <div class="info">
-          <p>
-            Made by Mabylife<br />
-            MabyType v1.0.4<br />
+          <p class="nst">
+            Made by 馬比Maby<br />
+            MabyType正體中文 v1.0<br />
             https://mabylife.github.io/mabyType
           </p>
         </div>
