Replace header text with SVG logo for improved branding

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon shortcut" href="favicon.ico" />
   </head>
   <body>
-    <h1 id="wordmark" class="wordmark">MABYTYPE</h1>
+    <img src="icons/wordmarkM.svg" id="wordmark" class="wordmark">
     <div class="settingCon" id="settingCon">
       <div class="settingItem" id="timeSetting">
         <h1 class="settingName nst">計時時間</h1>
