--- a/index.html
+++ b/index.html
@@ -92,6 +92,31 @@
     <div class="blur blurLeft"></div>
     <div class="blur blurRight"></div>
 
+    <div class="inGameHud" id="inGameHud">
+      <p class="hudTimer" id="hudTimer">59</p>
+      <div class="hudButCon">
+        <svg class="hudReplay" id="hudReplay" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_11_86)">
+            <path
+              d="M17 1L21 5M21 5L17 9M21 5H7C5.93913 5 4.92172 5.42143 4.17157 6.17157C3.42143 6.92172 3 7.93913 3 9V11M7 23L3 19M3 19L7 15M3 19H17C18.0609 19 19.0783 18.5786 19.8284 17.8284C20.5786 17.0783 21 16.0609 21 15V13"
+              stroke="#F4F3F1"
+              stroke-width="2.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_11_86">
+              <rect width="24" height="24" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+        <svg class="hudNext" id="hudNext" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M21.6667 28.3334L30 20L21.6667 11.6667M10 28.3334L18.3333 20L10 11.6667" stroke="#F4F3F1" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </div>
+    </div>
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
