--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="settingName nst">自動消除底線</h1>
         <div style="width: 50px"></div>
         <button class="settingOption nst" onclick="setting('autoDeleteUnderline', true)">ON</button>
-        <button class="settingOption disable nst disable" onclick="setting('autoDeleteUnderline', false)">OFF</button>
+        <button class="settingOption disable nst disable" onclick="setting('autoDeleteUnderline', true)" title="暫時無法關閉">OFF</button>
       </div>
       <div class="settingItem" style="margin-top: 50px" id="autoCorrectSetting">
         <h1 class="settingName nst">自動選字</h1>
