Add Info to display rating information

--- a/index.html
+++ b/index.html
@@ -59,8 +59,22 @@
       <p id="wpmResult"></p>
       <h1 class="nst">原始結果 / 淨結果</h1>
       <div class="resultItem">
-        <h1 class="nst">評級</h1>
+        <h1 title="WPM" class="nst">評級</h1>
         <p id="ratingResult"></p>
+        <img
+          src="icons/Info.svg"
+          title="錯誤率需要低於 10% 才能計算評級。
+  WPM ≥ 180：SSS
+  WPM ≥ 140：SS
+  WPM ≥ 90：S
+  WPM ≥ 75：A+
+  WPM ≥ 60：A–
+  WPM ≥ 45：B+
+  WPM ≥ 30：B–
+  WPM ≥ 25：C+
+  WPM ≥ 15：C–
+  WPM < 15：F"
+        />
       </div>
       <div class="resultItem">
         <h1 class="nst">正確</h1>
