Local played history v1

--- a/index.html
+++ b/index.html
@@ -61,20 +61,7 @@
       <div class="resultItem">
         <h1 title="WPM" class="nst">評級</h1>
         <p id="ratingResult"></p>
-        <img
-          src="icons/Info.svg"
-          title="錯誤率需要低於 10% 才能計算評級。
-  WPM ≥ 180：SSS
-  WPM ≥ 140：SS
-  WPM ≥ 90：S
-  WPM ≥ 75：A+
-  WPM ≥ 60：A–
-  WPM ≥ 45：B+
-  WPM ≥ 30：B–
-  WPM ≥ 25：C+
-  WPM ≥ 15：C–
-  WPM < 15：F"
-        />
+        <img src="icons/Info.svg" title="錯誤率需要低於 10% 才能計算評級並儲存結果" />
       </div>
       <div class="resultItem">
         <h1 class="nst">正確</h1>
