--- a/index.html
+++ b/index.html
@@ -73,7 +73,298 @@
       </div>
     </div>
 
+    <div class="historyCon" id="historyCon">
+      <div class="highestCon">
+        <h1 class="highestTitle">最高每分鐘打字數</h1>
+        <p class="highestWpm" id="highestWpm"></p>
+      </div>
+      <h1 class="historyTitle">歷史紀錄</h1>
+      <div class="tableCon">
+        <p class="noHistory" style="display: none" id="noHistory">沒有歷史紀錄</p>
+        <table class="historyTable" id="historyTable">
+          <thead>
+            <tr>
+              <th>編號</th>
+              <th>WPM</th>
+              <th>評級</th>
+              <th>模式</th>
+              <th>時間</th>
+            </tr>
+          </thead>
+          <tbody id="historyTableBody">
+            <tr class="historyRow">
+              <td class="historyIndex">2</td>
+              <td class="historyWpm">89 / 79</td>
+              <td class="historyRating">B-</td>
+              <td class="historyMode">名言 / 120秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+            <tr class="historyRow">
+              <td class="historyIndex">1</td>
+              <td class="historyWpm">120 / 113</td>
+              <td class="historyRating">A</td>
+              <td class="historyMode">名言 / 15秒</td>
+              <td class="historyTime">23 / 10 / 01 / 12:00</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
     <div class="footer">
+      <p class="historyBut nst" id="historyBut" onclick="displayHistoryCon()">練習紀錄</p>
       <div class="info">
         <p class="nst">
           Made by 馬比Maby<br />
@@ -82,8 +373,6 @@
         </p>
       </div>
     </div>
-
-    <div class="line"></div>
 
     <div class="loadingScreen" id="loadingScreen">
       <img src="icons/wordmarkM.svg" alt="" />
