Update title and description for MabyType to reflect Chinese language focus

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maby Typing</title>
-    <meta name="description" content="MabyType, a simple typing test game to improve your typing speed and accuracy." />
+    <title>MabyType-正體中文</title>
+    <meta name="description" content="MabyType, 臺灣最好看的中打練習網站" />
     <meta name="keywords" content="typing, typing test, typing game, speed typing, accuracy typing, typing prectice" />
     <meta name="author" content="Mabylife" />
     <link rel="stylesheet" href="style.css" />
